Event reordering in online data manager, major effect
Very small change but prevents a lot of potential problems caused by
unstable connections, where data could get deleted without a replacement