@@ -2,6 +2,7 @@ package com.github.egubot.main;
 
 import java.awt.GraphicsEnvironment;
 import java.io.Console;
+import java.util.Arrays;
 
 public class Run {
 
@@ -17,8 +18,8 @@ public class Run {
 			// If the bot isn't already in a console it runs the main method
 			if (console == null && !GraphicsEnvironment.isHeadless()) {
 				try {
-					Runtime.getRuntime().exec(
-							new String[] { "cmd", "/K", "Start", "cmd", "/k", "java -Xms40m -Xmx200m -jar bot.jar && exit" });
+					Runtime.getRuntime().exec(new String[] { "cmd", "/K", "Start", "cmd", "/k",
+							"java -Xms40m -Xmx200m -jar bot.jar " + Arrays.toString(args).replaceAll("[\\[\\],]", "")+ " && exit" });
 				} catch (Exception e) {
 					// If you're not on windows just run the bot through the
 					// terminal or create a shell script for it.
